@@ -204,13 +204,13 @@ one, if it's set to true (default).
 =item C<p3rl>
 
 The GitHub homepage field will be set to the p3rl.org shortened URL
-(e.g. C<http://p3rl.org/Dist::Zilla::PluginBundle::GitHub>) if this option is set to true (default is
+(e.g. C<https://p3rl.org/Dist::Zilla::PluginBundle::GitHub>) if this option is set to true (default is
 false).
 
 =item C<metacpan>
 
 The GitHub homepage field will be set to the metacpan.org distribution URL
-(e.g. C<http://metacpan.org/release/Dist-Zilla-Plugin-GitHub>) if this option is set to true
+(e.g. C<https://metacpan.org/release/Dist-Zilla-Plugin-GitHub>) if this option is set to true
 (default is false).
 
 This takes precedence over the C<p3rl> options (if both are
